Docs UI improvements. Sci user link style. Default layout changes. Regex tool: updated links; improved link style. Renamed some cookbook articles.

--- a/Other/DocFX/_doc/changes/v1.3.md
+++ b/Other/DocFX/_doc/changes/v1.3.md
@@ -30,7 +30,7 @@ Can fold namespaces, local functions, lambda, initializer lists, strings.
 
 Drag and drop a non-script file from the **Files** panel to the code editor: can add `/*/ meta comments /*/`.
 
-Added floating panel options **Topmost** and **Unowned**. Right-click panel caption...
+Added floating panel options **Topmost** and **Unowned**. Right-click panel header...
 
 Several small improvements. Removed some low-value features.
 
