--- a/Other/DocFX/_doc/changes/old/v0.12.md
+++ b/Other/DocFX/_doc/changes/old/v0.12.md
@@ -1,9 +1,9 @@
 ## Version 0.12.0 (2022-12-04)
 
 ### Editor
-Can run as a [portable](xref:portable) app.
+Can run as a portable app.
 
-Allows to test-execute [class files](xref:class_project) without a test script etc.
+Allows to test-execute class files without a test script etc.
 
 
 ### Library
