--- a/Other/DocFX/_doc/changes/old/v0.9.md
+++ b/Other/DocFX/_doc/changes/old/v0.9.md
@@ -15,7 +15,7 @@ Can import folders as links.
 
 Can set default icon of file types (script, class, folder).
 
-New [output tag](xref:output_tags) <nonl> - don't add newline.
+New output tag <nonl> - don't add newline.
 
 Cookbook recipes about:
 - **ListView** and **DataGrid** controls.
