--- a/Other/DocFX/_doc/changes/v1.0.md
+++ b/Other/DocFX/_doc/changes/v1.0.md
@@ -20,4 +20,4 @@ New members:
 - **wpfBuilder**: **Last2**, **LabeledBy**.
 
 ### Breaking changes
-Removed the "debugger script" feature. [More info](xref:debugger).
+Removed the "debugger script" feature.
